added literature sources in the notebook 'Literature_MNIST_tutorials.ipynb'

--- a/Literature_MNIST_tutorials.ipynb
+++ b/Literature_MNIST_tutorials.ipynb
@@ -13,10 +13,12 @@
     "\n",
     "- [MNIST in CSV](https://www.kaggle.com/datasets/oddrationale/mnist-in-csv): MNIST dataset provided in a easy-to-use CSV format\n",
     "\n",
-    "## Support vector machines (SVM)\n",
+    "## Support vector machines (SVM) / Support vector classifier (SVC)\n",
     "\n",
     "- [Support Vector Machine: Digit Classification with Python; Including my Hand Written Digits](https://towardsdatascience.com/support-vector-machine-mnist-digit-classification-with-python-including-my-hand-written-digits-83d6eca7004a)\n",
     "- [SVM with MNIST](https://dmkothari.github.io/Machine-Learning-Projects/SVM_with_MNIST.html): colored confusion matrix\n",
+    "- [Recognizing hand-written digits](https://scikit-learn.org/stable/auto_examples/classification/plot_digits_classification.html): uses dataset consisting of **8x8 pixel** images of digits; colored confusion matrix\n",
+    "- [An introduction to machine learning with scikit-learn](https://scikit-learn.org/stable/tutorial/basic/tutorial.html#introduction)\n",
     "\n",
     "## Convolutional neural networks (CNN)\n",
     "\n",
@@ -39,7 +41,26 @@
     "    - svm\n",
     "    - decison tree\n",
     "    - random forest\n",
-    "    - cnn \"LaNet5\"\"Simple CNN\" and \"Complex CNN\n"
+    "    - cnn \"LaNet5\"\"Simple CNN\" and \"Complex CNN\n",
+    "\n",
+    "- [MNIST Handwritten Digits Recognition using scikit-learn](https://mahendra-choudhary.medium.com/mnist-handwritten-digits-recognition-using-scikit-learn-36161768d10e)\n",
+    "    - KNN\n",
+    "    - SVM\n",
+    "\n",
+    "- [MNIST SciKit-Learn Tutorial](https://www.kaggle.com/code/icinnamon/mnist-scikit-learn-tutorial/notebook)\n",
+    "    - Random Forest Classifier\n",
+    "    - Gradient Boosting Classifier\n",
+    "    - [neural network] MLP Classifier\n",
+    "\n",
+    "- [Handwritten Digit Recognition Using scikit-learn](https://www.codingame.com/playgrounds/37409/handwritten-digit-recognition-using-scikit-learn)\n",
+    "    - K-Nearest Neighbors (KNN)\n",
+    "    - Random Forest\n",
+    "    - Linear SVC\n",
+    "\n",
+    "\n",
+    "## Issues and FAQs\n",
+    "\n",
+    "- [Issue importing MNIST dataset from sklearn [duplicate]](https://stackoverflow.com/questions/71260699/issue-importing-mnist-dataset-from-sklearn): function `fetch_mldata()` has been replaced in sklearn, you should use `fetch_openml()` instead"
    ]
   },
   {
