added literature sources on general information about ML in the notebook 'Literature_MNIST_tutorials.ipynb' and re-structured the notebook

--- a/Literature_MNIST_tutorials.ipynb
+++ b/Literature_MNIST_tutorials.ipynb
@@ -5,9 +5,77 @@
    "id": "17982db1-6515-4d2d-a782-502e35ca32e6",
    "metadata": {},
    "source": [
-    "# Literature collection of MNIST tutorials\n",
+    "# General information about ML algorithms\n",
     "\n",
-    "This notebook is intended to collect some links to interesting documentation or tutorials on machine learning using the well-known and well-researched [MNIST dataset](http://yann.lecun.com/exdb/mnist/) for handwritten digit recognition as an example. These literature references serve as a starting point for own application notebooks later on.\n",
+    "This section is intended to collect some links to general information about Machine learning (ML) and some selected ML algorithms later used for MNIST classification.\n",
+    "\n",
+    "## General topics\n",
+    "\n",
+    "### Machine learning (approaches and types)\n",
+    "\n",
+    "- [Machine learning](https://en.m.wikipedia.org/wiki/Machine_learning)\n",
+    "    - [Artificial intelligence (AI)](https://en.m.wikipedia.org/wiki/Machine_learning#Artificial_intelligence)\n",
+    "    - Approaches:\n",
+    "        - [Supervised learning](https://en.m.wikipedia.org/wiki/Machine_learning#Supervised_learning)\n",
+    "            - Types of supervised-learning algorithms:\n",
+    "                - [Active learning (machine learning)](https://en.m.wikipedia.org/wiki/Active_learning_(machine_learning))\n",
+    "                - [Statistical classification](https://en.m.wikipedia.org/wiki/Statistical_classification)\n",
+    "                - [Regression analysis](https://en.m.wikipedia.org/wiki/Regression_analysis)\n",
+    "        - [Unsupervised learning](https://en.m.wikipedia.org/wiki/Machine_learning#Unsupervised_learning)\n",
+    "        - [Reinforcement learning](https://en.m.wikipedia.org/wiki/Machine_learning#Reinforcement_learning)\n",
+    "\n",
+    "### Overfitting\n",
+    "\n",
+    "- [Overfitting: Machine_learning](https://en.m.wikipedia.org/wiki/Overfitting#Machine_learning)\n",
+    "\n",
+    "### Confusion matrix\n",
+    "\n",
+    "- [Confusion matrix](https://en.m.wikipedia.org/wiki/Confusion_matrix)\n",
+    "- [Everything you Should Know about Confusion Matrix for Machine Learning](https://www.analyticsvidhya.com/blog/2020/04/confusion-matrix-machine-learning/)\n",
+    "- [What is a Confusion Matrix in Machine Learning](https://machinelearningmastery.com/confusion-matrix-machine-learning/)\n",
+    "\n",
+    "\n",
+    "## ML algorithms (selected)\n",
+    "\n",
+    "### *k*-nearest neighbors algorithm\n",
+    "\n",
+    "- [k-nearest neighbors algorithm](https://en.m.wikipedia.org/wiki/K-nearest_neighbors_algorithm)\n",
+    "\n",
+    "### Support vector machines (SVM) / Support vector classifier (SVC)\n",
+    "\n",
+    "- [Support-vector machine](https://en.m.wikipedia.org/wiki/Support-vector_machine)\n",
+    "- [Radial basis function kernel](https://en.m.wikipedia.org/wiki/Radial_basis_function_kernel)\n",
+    "\n",
+    "### Random forests / random decision forests\n",
+    "\n",
+    "- [Random forests or random decision forests](https://en.m.wikipedia.org/wiki/Random_forest)\n",
+    "\n",
+    "### Convolutional neural network (CNN)\n",
+    "\n",
+    "- [Artificial neural network (ANN)](https://en.m.wikipedia.org/wiki/Artificial_neural_network)\n",
+    "- [Convolutional neural network](https://en.m.wikipedia.org/wiki/Convolutional_neural_network)\n",
+    "- [Deep learning (deep structured learning)](https://en.m.wikipedia.org/wiki/Deep_learning)\n",
+    "- [Feedforward neural network (FNN)](https://en.m.wikipedia.org/wiki/Feedforward_neural_network)\n",
+    "    - [Single-layer perceptron](https://en.m.wikipedia.org/wiki/Feedforward_neural_network#Single-layer_perceptron)\n",
+    "    - [Multi-layer perceptron](https://en.m.wikipedia.org/wiki/Feedforward_neural_network#Multi-layer_perceptron)\n",
+    "- [Artificial neuron](https://en.m.wikipedia.org/wiki/Artificial_neuron)\n",
+    "- [Perceptron](https://en.m.wikipedia.org/wiki/Perceptron)\n",
+    "- [Activation function](https://en.m.wikipedia.org/wiki/Activation_function)\n",
+    "    - [Table of activation functions](https://en.m.wikipedia.org/wiki/Activation_function#Table_of_activation_functions)\n",
+    "    - [Heaviside step function](https://en.m.wikipedia.org/wiki/Heaviside_step_function)\n",
+    "    - [Rectified Linear Unit (ReLu function)](https://en.m.wikipedia.org/wiki/Rectifier_(neural_networks))\n",
+    "    - [Sigmoid function](https://en.m.wikipedia.org/wiki/Sigmoid_function)\n",
+    "- [Loss function or cost function](https://en.m.wikipedia.org/wiki/Loss_function)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd0ce770-ae8d-4e89-b26f-0db14b3e60da",
+   "metadata": {},
+   "source": [
+    "# Literature related to MNIST tutorials\n",
+    "\n",
+    "This section is intended to collect some links to interesting documentation or tutorials on machine learning using the well-known and well-researched [MNIST dataset](http://yann.lecun.com/exdb/mnist/) for handwritten digit recognition as an example. These literature references serve as a starting point for own application notebooks later on.\n",
     "\n",
     "## Retrieve MNIST dataset\n",
     "\n",
@@ -66,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d45e39da-0ae1-46e9-bcd0-cd757a41bb59",
+   "id": "bc400e2c-2a59-4c49-8a78-c935f14c67de",
    "metadata": {},
    "outputs": [],
    "source": []
