--- a/playground/keras_cnn_example.ipynb
+++ b/playground/keras_cnn_example.ipynb
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1015,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1029,9 +1029,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
