added literature sources on Parameter tuning for SVC in notebook 'Literature_MNIST_tutorials.ipynb'

--- a/Literature_MNIST_tutorials.ipynb
+++ b/Literature_MNIST_tutorials.ipynb
@@ -43,8 +43,14 @@
     "\n",
     "### Support vector machines (SVM) / Support vector classifier (SVC)\n",
     "\n",
+    "Short explanation of SVC:\n",
+    "> \"Support Vectors Classifier tries to find the best **hyperplane to separate the different classes** by maximizing the distance between sample points and the hyperplane.\" (source: [In Depth: Parameter tuning for SVC](https://medium.com/all-things-ai/in-depth-parameter-tuning-for-svc-758215394769))\n",
+    "\n",
     "- [Support-vector machine](https://en.m.wikipedia.org/wiki/Support-vector_machine)\n",
     "- [Radial basis function kernel](https://en.m.wikipedia.org/wiki/Radial_basis_function_kernel)\n",
+    "- Parameter tuning and overfitting:\n",
+    "    - [In Depth: Parameter tuning for SVC](https://medium.com/all-things-ai/in-depth-parameter-tuning-for-svc-758215394769): uses Iris dataset from sklearn\n",
+    "    - [SVM Hyperparameter Tuning using GridSearchCV](https://www.vebuso.com/2020/03/svm-hyperparameter-tuning-using-gridsearchcv/): uses also [Iris flower data set](https://en.wikipedia.org/wiki/Iris_flower_data_set), [principle illustration of a flower with sepal and petal](https://en.wikipedia.org/wiki/Petal#/media/File:Mature_flower_diagram.svg)\n",
     "\n",
     "### Random forests / random decision forests\n",
     "\n",
@@ -156,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.3"
   },
   "toc-autonumbering": true
  },
