--- a/SVM_Iris_parameter_tuning.ipynb
+++ b/SVM_Iris_parameter_tuning.ipynb
@@ -207,6 +207,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98300099-0663-4dfb-8bcf-e65e4e5035ce",
+   "metadata": {},
+   "source": [
+    "#### Inspect **structure of dataframe**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "4ad7e820-8c5b-4df2-8607-d9f3d4700677",
@@ -454,7 +462,7 @@
    "id": "bb1af779-72ee-4427-8dd5-a3c5ca2e4778",
    "metadata": {},
    "source": [
-    "#### Visualise Data with Pairs Plots\n",
+    "#### Visualise data with **pairs plots**\n",
     "\n",
     "In the following, [Seaborn](https://seaborn.pydata.org/) is applied which is a library for making statistical graphics in Python. It is built on top of matplotlib and closely integrated with pandas data structures. \n",
     "\n",
