minor revisions to the wording in 'SVM_Iris_parameter_tuning.ipynb'

--- a/SVM_Iris_parameter_tuning.ipynb
+++ b/SVM_Iris_parameter_tuning.ipynb
@@ -85,14 +85,14 @@
     "    - Which columns are there? => With which methods can they be read in (e.g. import of CSV files)?\n",
     "    - What do they contain for (physical) measured variables? => Which technical or physical correlations exist?\n",
     "    - Which data formats or types are there? => Do they have to be converted?\n",
-    "    - In which value ranges do the measurement data vary? => Are standardisations necessary?\n",
+    "    - In which value ranges do the measurement data vary? => Are normalizations necessary?\n",
     "\n",
     "3. Identify **anomalies** in the data sets:\n",
     "    - Do the data have gaps or duplications? => Does the data set need to be cleaned?\n",
-    "    - Are there obvious erroneous entries or measurement outliers? => Must (statistical) filtering be carried out?\n",
+    "    - Are there obvious erroneous entries or measurement outliers? => Does (statistical) filtering have to be carried out?\n",
     "\n",
     "4. Avoidance of **tendencies due to bias**:\n",
-    "    - Are the labels equally distributed? => Does the data set need to be enriched with additional data for balance?\n",
+    "    - Are all possible classes included in the dataset and equally distributed? => Does the data set need to be enriched with additional data for balance?\n",
     "\n",
     "5. Find a first rough **idea of which correlations** could be in the data set"
    ]
@@ -533,17 +533,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "154e4480-a591-4aae-a834-a1b7c2552c88",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0xa057f7f0>"
+       "<seaborn.axisgrid.PairGrid at 0x9e91ef50>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -601,7 +601,7 @@
    "id": "b444bd08-4fb1-4b95-88a2-f8b52e90ca05",
    "metadata": {},
    "source": [
-    "## Classification by support vector classifier (SVC)\n",
+    "## STEP 3: Classification by support vector classifier (SVC)\n",
     "\n",
     "### Operating principal\n",
     "\n",
@@ -621,7 +621,7 @@
    "id": "6e2e6598-0dd0-4f4d-820c-5cdc6f48d827",
    "metadata": {},
    "source": [
-    "## STEP 3: Evaluation (metrics)"
+    "## STEP 4: Evaluation (metrics)"
    ]
   },
   {
