added explanation of histograms to notebook 'SVM_Iris_parameter_tuning.ipynb'

--- a/SVM_Iris_parameter_tuning.ipynb
+++ b/SVM_Iris_parameter_tuning.ipynb
@@ -6292,9 +6292,13 @@
    "id": "62f70a13-24d7-4140-a4bf-07921cc38a5e",
    "metadata": {},
    "source": [
-    "#### Display Histogram\n",
+    "### Display Histogram\n",
     "\n",
-    "This section was inspired by: [Pandas Histogram – DataFrame.hist()](https://dataindependent.com/pandas/pandas-histogram-dataframe-hist/)."
+    "This section was inspired by: [Pandas Histogram – DataFrame.hist()](https://dataindependent.com/pandas/pandas-histogram-dataframe-hist/).\n",
+    "\n",
+    "**Histograms** represent **frequency distributions** graphically. This requires the separation of the data into classes (so-called **bins**).\n",
+    "\n",
+    "These classes are represented in the histogram as rectangles of equal or variable width. The height of each rectangle then represents the (relative or absolute) **frequency density**."
    ]
   },
   {
