--- a/SVM_MNIST_8x8_scikit.ipynb
+++ b/SVM_MNIST_8x8_scikit.ipynb
@@ -428,7 +428,7 @@
    "source": [
     "## Confusion matrix\n",
     "\n",
-    "By using the function `sklearn.metrics.ConfusionMatrixDisplay()` a confusion matrix of the true digit values versus the predicted digit values is plotted.\n",
+    "By using the function `sklearn.metrics.confusion_matrix()` a confusion matrix of the true digit values versus the predicted digit values is plotted.\n",
     "\n",
     "### Textual confusion matrix"
    ]
@@ -477,7 +477,9 @@
     }
    },
    "source": [
-    "### Colored confusion matrix"
+    "### Colored confusion matrix\n",
+    "\n",
+    "The function `sklearn.metrics.ConfusionMatrixDisplay()` plots a colored confusion matrix."
    ]
   },
   {
@@ -568,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
