--- a/Literature_MNIST_tutorials.ipynb
+++ b/Literature_MNIST_tutorials.ipynb
@@ -46,8 +46,10 @@
     "Short explanation of SVC:\n",
     "> \"Support Vectors Classifier tries to find the best **hyperplane to separate the different classes** by maximizing the distance between sample points and the hyperplane.\" (source: [In Depth: Parameter tuning for SVC](https://medium.com/all-things-ai/in-depth-parameter-tuning-for-svc-758215394769))\n",
     "\n",
-    "- [Support-vector machine](https://en.m.wikipedia.org/wiki/Support-vector_machine)\n",
-    "- [Radial basis function kernel](https://en.m.wikipedia.org/wiki/Radial_basis_function_kernel)\n",
+    "- [Support-vector machine](https://en.wikipedia.org/wiki/Support-vector_machine)\n",
+    "    - [Linear classifier](https://en.wikipedia.org/wiki/Linear_classifier)\n",
+    "    - [Radial basis function kernel](https://en.wikipedia.org/wiki/Radial_basis_function_kernel)\n",
+    "    - [Polynomial kernel](https://en.wikipedia.org/wiki/Polynomial_kernel)\n",
     "- Parameter tuning and overfitting:\n",
     "    - [In Depth: Parameter tuning for SVC](https://medium.com/all-things-ai/in-depth-parameter-tuning-for-svc-758215394769): uses Iris dataset from sklearn\n",
     "    - [SVM Hyperparameter Tuning using GridSearchCV](https://www.vebuso.com/2020/03/svm-hyperparameter-tuning-using-gridsearchcv/): uses also [Iris flower data set](https://en.wikipedia.org/wiki/Iris_flower_data_set), [principle illustration of a flower with sepal and petal](https://en.wikipedia.org/wiki/Petal#/media/File:Mature_flower_diagram.svg)\n",
