small changes in figure metadata in 'SVM_Iris_parameter_tuning.ipynb'

--- a/SVM_Iris_parameter_tuning.ipynb
+++ b/SVM_Iris_parameter_tuning.ipynb
@@ -169,7 +169,12 @@
   {
    "cell_type": "markdown",
    "id": "42b2e96b-5670-4fae-a345-4ce2f98363ce",
-   "metadata": {},
+   "metadata": {
+    "caption": "",
+    "label": "fig:Iris_setosa_virginica_versicolor",
+    "tags": [],
+    "widefigure": true
+   },
    "source": [
     "![left: *Iris setosa* (source: [Irissetosa1.jpg](https://commons.wikimedia.org/wiki/File:Irissetosa1.jpg), license: public domain); middle: *Iris versicolor* (source: [Iris_versicolor_3.jpg](https://en.wikipedia.org/wiki/File:Iris_versicolor_3.jpg), license: CC-SA 3.0); right: *Iris virginica* (source: [Iris_virginica.jpg](https://en.wikipedia.org/wiki/File:Iris_virginica.jpg), license: CC-SA 2.0)\n",
     "](images/Iris_images.png)"
@@ -7021,7 +7026,7 @@
    "cell_type": "markdown",
    "id": "e38425ed-a88e-4d1e-a4c9-03c6867386b1",
    "metadata": {
-    "caption": "test bla blubb",
+    "caption": "",
     "label": "fig:Svm_separating_hyperplanes",
     "tags": [],
     "widefigure": true
